[gd_scene load_steps=2 format=2]

[ext_resource path="res://Boot.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 350.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 350.0
margin_bottom = 14.0
text = "Repair Calculator"

[node name="A" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 350.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="A"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Damage Type A"

[node name="DmgA" type="SpinBox" parent="A"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
value = 100.0
align = 2
suffix = "%"

[node name="B" type="HBoxContainer" parent="."]
margin_top = 46.0
margin_right = 350.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="B"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Damage Type B"

[node name="DmgB" type="SpinBox" parent="B"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
value = 100.0
align = 2
suffix = "%"

[node name="C" type="HBoxContainer" parent="."]
margin_top = 74.0
margin_right = 350.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="C"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Damage Type C"

[node name="DmgC" type="SpinBox" parent="C"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
value = 100.0
align = 2
suffix = "%"

[node name="Fix" type="HBoxContainer" parent="."]
margin_top = 102.0
margin_right = 350.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="Fix"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Fix Price"

[node name="FixPrice" type="SpinBox" parent="Fix"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 5e+07
value = 1500.0
align = 2
suffix = "E$"

[node name="Replace" type="HBoxContainer" parent="."]
margin_top = 130.0
margin_right = 350.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="Replace"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Purchase Price"

[node name="BuyPrice" type="SpinBox" parent="Replace"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 5e+07
value = 70000.0
allow_greater = true
align = 2
suffix = "E$"

[node name="Calc" type="Button" parent="."]
margin_top = 158.0
margin_right = 350.0
margin_bottom = 178.0
text = "Calculate"

[node name="Panel" type="Panel" parent="."]
margin_top = 182.0
margin_right = 350.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel"]
margin_right = 350.0
margin_bottom = 118.0
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Calc" to="." method="_on_Calc_pressed"]
